--- a/.github/workflows/main_bitsbotsosigu.yml
+++ b/.github/workflows/main_bitsbotsosigu.yml
@@ -39,22 +39,13 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: node-app
       
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C0FED8EE8F4C47EFBBD34D0F8BDDAF9F }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2EB03731CD9E4B04A082C60651AC54BE }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6B3DB0D444D94B019D889AC9C7266CD5 }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
@@ -62,4 +53,4 @@ jobs:
           app-name: 'bitsbotsOsigu'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_52681BFDF24444E7AE3F02992FB9D3F4 }}
