--- a/web.config
+++ b/web.config
@@ -1,13 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
     <rewrite>
       <rules>
-        <rule name="Redirect to HTTPS" stopProcessing="true">
-          <match url="(.*)" />
+        <rule name="Redirect to app.js" stopProcessing="true">
+          <match url=".*" />
           <conditions>
-            <add input="{HTTPS}" pattern="off" />
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
-          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
+          <action type="Rewrite" url="app.js" />
         </rule>
       </rules>
     </rewrite>
